Fix center-align

--- a/app/client/templates/views/home.less
+++ b/app/client/templates/views/home.less
@@ -62,14 +62,3 @@
     margin-top: 100px;
   }
 
-  .section{
-    padding-left: 1rem;
-    padding-right: 1rem;
-    width: 63%;
-  }
-
-  .center{
-    margin: 0 auto;
-    
-  }
-
